--- a/src/_components/App/App.scss
+++ b/src/_components/App/App.scss
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -17,8 +12,8 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* flex-direction: column; */
+  /* align-items: center; */
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -35,4 +30,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.title{
+  margin: 20px auto;
+  font-size: 40px;
+  color: gold;
+  text-shadow: 5px 5px 10px #000;
 }
